2005-06-08  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Add execvp(2).  (This should have been added with the other
	  exec(2) additions...).

2005-06-08  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Update comment with correct exception type.
	* UnixConvert.cs: Rename ToFilePermissions(string) to
	  FromOctalPermissionString; Add ToOctalPermissionString,
	  FromUnixPermissionString, ToUnixPermissionString.
	* UnixMarshal.cs: Remove ErrorMarshal.HaveStrerror_r and
	  UnixMarshal.IsErrorDescriptionThreadSafe.  strerror(3) is now thread-safe
	  (from managed code, at least).  Update comment.

2005-06-07  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Don't use lstat(2), use stat(2).  This fits with
	  expectations better -- if you create a UnixFileInfo() on a symlink, you
	  want to get the target's information, not the symlink's info.  Add
	  GetFileStatus so UnixSymbolicLinkInfo can override this behavior.
	* UnixSymbolicLinkInfo.cs: Implement GetFileStatus() (which calls lstat(2)).

2005-06-07  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Document naming conventions.

2005-06-05  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Change automatic "ifdef HAVE_<header>" support prefix to
	  "ah:" from ">".  I hadn't known about ">", and "ah:" is (somewhat) more
	  obvious.
	* Syscall.cs: Change IncludeAttribute to put all headers/defines one/line.
	  It's easier to read this way.  Add "ah:sys/xattr.h" to the headers.

2005-06-03  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Add sanity checking to snprintf(3) to avoid buffer overflows.

2005-06-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs: Remove FilePosition property & replace with
	  SaveFilePosition/RestoreFilePosition methods.  Since FilePosition has a
	  finalizer, it's not right to have implicitly created instances.
	* Stdlib.cs: 
	  - FilePosition: GC.SuppressFinalize() should be last in Dispose() 
	    (following .NET guidelines).