@@ -1,3 +1,10 @@
+2005-06-09  Jonathan Pryor <jonpryor@vt.edu>
+
+	* make-map.cs: Look for [Obsolete] members, and mark the UnixConvert
+	  conversion functions with the same [Obsolete] message.  This should permit
+	  more graceful deprecation of enumerations in the future (rather than just
+	  API breaks).
+
 2005-06-08  Jonathan Pryor <jonpryor@vt.edu>
 
 	* Syscall.cs: Add execvp(2).  (This should have been added with the other
